Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104316

Qt 6.3.1 build for arm failed: selected processor does not support `yield' in ARM mode

XMLWordPrintable

    • 2
    • 8128abeaece5b05476f79ff493597b838b223512 (dev) f01fd007a6a9656b5dd009969751a1ab551a316e (6.4) b71cd7e93d (qt/qtbase/6.3) b71cd7e93d (qt/tqtc-qtbase/6.3)
    • Foundation Sprint 62, Foundation Sprint 63

      Cross build toolchain: http://musl.cc/arm-linux-musleabi-cross.tgz

       

      Build options:

      '/usr/local/bin/cmake' '-DQT_HOST_PATH=/usr/src/qt-host/6.3.1/gcc_64' '-DCMAKE_SYSTEM_NAME=Linux' '-DCMAKE_SYSTEM_PROCESSOR=arm' '-DCMAKE_C_COMPILER=arm-linux-musleabi-gcc' '-DCMAKE_SYSROOT=/cross_root/arm-linux-musleabi' '-DCMAKE_CXX_COMPILER=arm-linux-musleabi-g++' '-DBUILD_SHARED_LIBS=OFF' '-DCMAKE_INSTALL_PREFIX=/cross_root/arm-linux-musleabi/opt/qt' '-DQT_BUILD_EXAMPLES=FALSE' '-DQT_BUILD_TESTS=FALSE' '-DCMAKE_BUILD_TYPE=Release' '-DQT_QMAKE_DEVICE_OPTIONS=CROSS_COMPILE=arm-linux-musleabi-' '-DINPUT_cxx14=yes' '-DINPUT_cxx17=yes' '-DINPUT_cxx20=no' '-DINPUT_optimize_size=yes' '-DINPUT_openssl=linked' '-DINPUT_gui=no' '-DINPUT_dbus=no' '-DINPUT_widgets=no' '-DINPUT_testlib=no' '-DINPUT_animation=no' '-DINPUT_optimize_full=yes' '-G' 'Ninja' '/usr/src/qtbase-6.3.1'
      

      Full output log can be found here: https://github.com/abcfy2/qBittorrent-Enhanced-Edition/runs/6883198160?check_suite_focus=true

       

       [201/423] Building CXX object src/corelib/CMakeFiles/Core.dir/thread/qfuturewatcher.cpp.o
       [202/423] Building CXX object src/corelib/CMakeFiles/Core.dir/thread/qfutureinterface.cpp.o
       FAILED: src/corelib/CMakeFiles/Core.dir/thread/qfutureinterface.cpp.o 
       /cross_root/bin/arm-linux-musleabi-g++ --sysroot=/cross_root/arm-linux-musleabi -DPCRE2_CODE_UNIT_WIDTH=16 -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_USING_NAMESPACE -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/usr/src/qtbase-6.3.1/src/corelib/Core_autogen/include -I/usr/src/qtbase-6.3.1/include -I/usr/src/qtbase-6.3.1/include/QtCore -I/usr/src/qtbase-6.3.1/src/corelib -I/usr/src/qtbase-6.3.1/src/corelib/global -I/usr/src/qtbase-6.3.1/src/corelib/kernel -I/usr/src/qtbase-6.3.1/src/corelib/../3rdparty/tinycbor/src -I/usr/src/qtbase-6.3.1/include/QtCore/6.3.1 -I/usr/src/qtbase-6.3.1/include/QtCore/6.3.1/QtCore -I/usr/src/qtbase-6.3.1/src/corelib/../3rdparty/double-conversion/double-conversion -I/usr/src/qtbase-6.3.1/src/corelib/../3rdparty/double-conversion -I/usr/src/qtbase-6.3.1/src/corelib/../3rdparty/forkfd -I/usr/src/qtbase-6.3.1/src/corelib/.rcc -I/usr/src/qtbase-6.3.1/mkspecs/linux-g++ -I/usr/src/qtbase-6.3.1/src/3rdparty/pcre2/src -s -DNDEBUG -O3 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -ffunction-sections -fdata-sections -Wsuggest-override -std=c++17 -Winvalid-pch -include /usr/src/qtbase-6.3.1/src/corelib/CMakeFiles/Core.dir/cmake_pch.hxx -MD -MT src/corelib/CMakeFiles/Core.dir/thread/qfutureinterface.cpp.o -MF src/corelib/CMakeFiles/Core.dir/thread/qfutureinterface.cpp.o.d -o src/corelib/CMakeFiles/Core.dir/thread/qfutureinterface.cpp.o -c /usr/src/qtbase-6.3.1/src/corelib/thread/qfutureinterface.cpp
       /tmp/cccEfGMm.s: Assembler messages:
       /tmp/cccEfGMm.s:4001: Error: selected processor does not support `yield' in ARM mode
       /tmp/cccEfGMm.s:4012: Error: selected processor does not support `yield' in ARM mode
       /tmp/cccEfGMm.s:4712: Error: selected processor does not support `yield' in ARM mode
       /tmp/cccEfGMm.s:4964: Error: selected processor does not support `yield' in ARM mode
       /tmp/cccEfGMm.s:5361: Error: selected processor does not support `yield' in ARM mode
       /tmp/cccEfGMm.s:6092: Error: selected processor does not support `yield' in ARM mode
       /tmp/cccEfGMm.s:6302: Error: selected processor does not support `yield' in ARM mode
       [203/423] Building CXX object src/corelib/CMakeFiles/Core.dir/tools/qcommandlineoption.cpp.o
       [204/423] Building CXX object src/corelib/CMakeFiles/Core.dir/tools/qcommandlineparser.cpp.o
      

      But 6.3.0 works very well.

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mmutz Marc Mutz
            fengyu fengyu
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes